--- a/src/M2-SPRINT-3/S3-05-M2/S3-05-M2.html
+++ b/src/M2-SPRINT-3/S3-05-M2/S3-05-M2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Maria Clara Tabosa">
     <link rel="stylesheet" href="./styles/style.css">
-    <title>Document</title>
+    <title>Colunas responsivas</title>
 </head>
 <body>
     <div>
