--- a/src/M2-SPRINT-3/S3-11-M2/index.html
+++ b/src/M2-SPRINT-3/S3-11-M2/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="./src/styles/reset.css" />
-    <link rel="stylesheet" href="./src/styles/index.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Maria Clara Tabosa">
+  <link rel="stylesheet" href="./src/styles/reset.css" />
+  <link rel="stylesheet" href="./src/styles/index.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz@8..144&display=swap" rel="stylesheet">
+  <title>Trabalhando com import e export</title>
+</head>
 
-    <title>Trabalhando com import e export</title>
-  </head>
-  <body>
-    <main class="main__container">
-      <section class="users__container">
-        <ul class="users__list"></ul>
-      </section>
+<body>
+  <main class="main__container">
+    <section class="users__container">
+      <h2>Lista de instrutores</h2>
+      <ul class="users__list"></ul>
+    </section>
 
-      <section class="books__container">
-        <ul class="books__list"></ul>
-      </section>
-    </main>
-    <script type="module" src="./src/scripts/index.js"></script>
-  </body>
+    <section class="books__container">
+      <h2>Lista de livros</h2>
+      <ul class="books__list"></ul>
+    </section>
+  </main>
+  <script type="module" src="./src/scripts/index.js"></script>
+</body>
+
 </html>
