fix: SPRINT-7/frontend

--- a/src/M2-SPRINT-7/frontend/src/pages/dashboard.html
+++ b/src/M2-SPRINT-7/frontend/src/pages/dashboard.html
@@ -56,7 +56,9 @@
                 <div class="company__department">
                     <span class="company__name"></span>
                 </div>
-                <ul class="user__coworkers"></ul>
+                <div class="user__hired--list">
+                    <ul class="user__coworkers"></ul>
+                </div>
             </div>
         </div>
     </main>
